base-installer (1.65) UNRELEASED; urgency=low

  [ Martin Michlmayr ]
  * Handle the ARM sub-architectures iop32x, iop33x and ixp4xx.
  * Add a test suite entry for arm/iop32x based on the Thecus N2100.

  [ Frans Pop ]
  * Don't offer yaird for S/390 as it does not configure the dasds.

 -- Frans Pop <fjp@debian.org>  Sat, 12 Aug 2006 10:28:25 +0200

base-installer (1.64) unstable; urgency=low

  [ Colin Watson ]
  * Try to use /etc/initramfs-tools/conf.d/resume or
    /etc/mkinitramfs/conf.d/resume if initramfs-tools is new enough to have
    the conf.d directory, rather than editing a conffile.
  * Separate resume configuration file handling from other ramdisk
    configuration file handling.
  * AMD CPU family 15 systems (i.e. K8) should be allowed to install K7
    kernels.
  * Fix quoting so that LVM (but not crypto) installs don't break due to the
    lack of dmsetup-udeb.

  [ Frans Pop ]
  * Use separate variable for selected ramdisk generator.
  * Select kernel meta package for current kernel major version for hppa.

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach
  * Panjabi (pa.po) by A S Alam
  * Traditional Chinese (zh_TW.po) by Tetralet

 -- Frans Pop <fjp@debian.org>  Sun, 30 Jul 2006 02:38:59 +0200

base-installer (1.63) unstable; urgency=low

  * Set meta package as default kernel for S/390.
  * Remove code for determining KERNEL_ABI from testsuite as it is now unused
    and as it is broken anyway if the first wanted kernel is a meta package.
  * Be more conservative when setting a generic default for kernel selection.
  * Run vgscan in-target during create_devices as it needs /sys mounted; if
    not, the kernel can get loads of ghost RAID devices in /sys/block.
  * Avoid warnings from lvm2 tools about open file descriptors.

 -- Frans Pop <fjp@debian.org>  Tue, 11 Jul 2006 14:10:38 +0200

base-installer (1.62) unstable; urgency=low

  [ Martin Michlmayr ]
  * RiscPC has been renamed from riscpc to rpc.