@@ -1,0 +1,13 @@
+processor      : 0
+cpu            : PPC970, altivec supported
+clock          : 1800.000000MHz
+revision       : 2.2 (pvr 0039 0202)
+
+timebase       : 33333333
+platform       : PowerMac
+machine                : PowerMac7,2
+motherboard    : PowerMac7,2 MacRISC4 Power Macintosh
+detected as    : 336 (PowerMac G5)
+pmac flags     : 00000000
+L2 cache       : 512K unified
+pmac-generation        : NewWorld
