@@ -1,0 +1,10 @@
+subarch powermac_newworld
+cpuinfo g5.cpuinfo
+majors 2.6
+flavour ppc64
+kernel-2.6 linux-image-2.6-ppc64
+usable \
+  linux-image-2.6-ppc64
+unusable \
+  linux-image-2.6-powerpc \
+  linux-image-2.6-powerpc64
