@@ -6,8 +6,9 @@ base-installer (1.65) UNRELEASED; urgency=low
 
   [ Frans Pop ]
   * Don't offer yaird for S/390 as it does not configure the dasds.
+  * Add kernel selection support for ppc64. Closes: #383135.
 
- -- Frans Pop <fjp@debian.org>  Sat, 12 Aug 2006 10:28:25 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 16 Aug 2006 02:47:58 +0200
 
 base-installer (1.64) unstable; urgency=low
 
